# InvestmentPortfolio

./: .gitignore  AnalysisFuncs.py  CLAUDE.md  DataFormatting.py  DataGeneration.py  PortfolioAnalysis.py  README.md  requirements.txt
.claude/: settings.local.json
market-data-web-service/: .gitignore  CLAUDE.md  README.md  config.yaml  openapi.yaml  pyproject.toml  requirements.txt
market-data-web-service/.claude/: settings.local.json
market-data-web-service/.specify/: feature.json
market-data-web-service/.specify/extensions/: .registry
market-data-web-service/.specify/integrations/: claude.manifest.json  speckit.manifest.json
market-data-web-service/.specify/memory/: constitution.md
market-data-web-service/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
market-data-web-service/.specify/workflows/: workflow-registry.json
market-data-web-service/app/: config.py  exceptions.py  logging_config.py  main.py
market-data-web-service/app/api/: cache.py  fx.py  identifiers.py  securities.py
market-data-web-service/app/models/: fallback.py  pricing.py
market-data-web-service/app/providers/: __init__.py  cached_provider.py  fallback_provider.py  fx_provider.py  identifier_provider.py  local_provider.py  yfinance_provider.py
market-data-web-service/data/: Blackrock_Consensus_85.csv  Blackrock_NextGen_Healthcare.csv  Blackrock_World_Healthscience.csv  IFSL_Marlborough_UK_Micro-Cap_Growth.csv  Scottish_Widows_Pension.csv  WisdomTree_Battery_Metals.csv  fallback_config.json  gbp.csv
market-data-web-service/tests/: conftest.py
(+268 files in other folders)
